Closed Bug 1357244 Opened 9 years ago Closed 9 years ago

Crash in mozilla::MediaCacheStream::BlockList::RemoveBlock

Categories

(Core :: Audio/Video: Playback, defect, P1)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- wontfix
firefox53 --- wontfix
firefox54 --- wontfix
firefox55 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

(Keywords: crash)

Crash Data

Attachments

(3 files)

This bug was filed from the Socorro interface and is report bp-8774867c-4001-4581-baec-403592170417. ============================================================= https://hg.mozilla.org/mozilla-central/annotate/ce69b6e1773e/dom/media/MediaCache.cpp#l456 Looks like a null-deref on |entry|.
Assignee: nobody → jwwang
Priority: -- → P1
See Also: → 1356583
Attachment #8859022 - Flags: review?(gsquelart)
Attachment #8859023 - Flags: review?(gsquelart)
Comment on attachment 8859022 [details] Bug 1357244. P1 - use stronger assertions to debug non-debug builds. https://reviewboard.mozilla.org/r/131040/#review134190
Attachment #8859022 - Flags: review?(gsquelart) → review+
P2 will take me a little while to review...
Comment on attachment 8859023 [details] Bug 1357244. P2 - enforce the invariant that a block is in mFreeBlocks iff it has no owners. https://reviewboard.mozilla.org/r/131042/#review134234
Attachment #8859023 - Flags: review?(gsquelart) → review+
Thanks!
Pushed by jwwang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ae7086408b80 P1 - use stronger assertions to debug non-debug builds. r=gerald https://hg.mozilla.org/integration/autoland/rev/96e7a9cb5588 P2 - enforce the invariant that a block is in mFreeBlocks iff it has no owners. r=gerald
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment on attachment 8859022 [details] Bug 1357244. P1 - use stronger assertions to debug non-debug builds. Approval Request Comment [Feature/Bug causing the regression]:unknown [User impact if declined]:crash might happen when memory is low. [Is this code covered by automated tests?]:yes [Has the fix been verified in Nightly?]:yes [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]:none [Is the change risky?]:low [Why is the change risky/not risky?]:the change is simple and tested on Try. [String changes made/needed]:none
Attachment #8859022 - Flags: approval-mozilla-beta?
Comment on attachment 8859834 [details] [diff] [review] 1357244_fix_p2_54_beta.patch Approval Request Comment [Feature/Bug causing the regression]:unknown [User impact if declined]: crash might happen when memory is low. [Is this code covered by automated tests?]:yes [Has the fix been verified in Nightly?]:yes [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]:none [Is the change risky?]:low [Why is the change risky/not risky?]:the change is simple and tested on Try. [String changes made/needed]:none
Attachment #8859834 - Flags: approval-mozilla-beta?
Comment on attachment 8859022 [details] Bug 1357244. P1 - use stronger assertions to debug non-debug builds. The volume of crashes in 53/54 is very low. Let's let it ride the train on 55. Beta54-.
Attachment #8859022 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
Attachment #8859834 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
From the crash report, the volume of crashes in 54 is 1 from the past month. Mark 54 won't fix. Let it ride the train on 55 and bake more time.
Depends on: 1358726
(In reply to JW Wang [:jwwang] [:jw_wang] from comment #11) > [Is this code covered by automated tests?]:yes > [Has the fix been verified in Nightly?]:yes > [Needs manual test from QE? If yes, steps to reproduce]: no Setting qe-verify- based on JW Wang's assessment on manual testing needs and the fact that this fix has automated coverage.
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: