Bug 1357244. P1 - use stronger assertions to debug non-debug builds. r=gerald

MozReview-Commit-ID: 8QK7vawpoIQ